# MIPT-FLaT-regex-practice-1

./: .gitignore  CMakeLists.txt  README.md  main.cpp  regex_solver.cpp  regex_solver.h  test.cpp
